--- a/Bookstore/config/config.json
+++ b/Bookstore/config/config.json
@@ -1,14 +1,14 @@
 {
 
-    
+
     "express": {
         "view cache": false,
         "view engine": "js",
         "views": "path:./.build/templates"
     },
-    
 
-    
+
+
     "view engines": {
         "js": {
             "module": "engine-munger",
@@ -26,21 +26,51 @@
             }
         }
     },
-    
 
-    
+
+
     "i18n": {
         "contentPath": "path:./locales",
         "fallback": "en-US"
     },
-    
+
 
     "specialization": {
     },
 
     "middleware": {
 
-        
+        /**
+         * Override the default lusca configuration to disable CSRF handling.
+         */
+        "appsec": {
+            "module": {
+                "arguments": [
+                    {
+                        "xframe": "SAMEORIGIN",
+                        "p3p": false,
+                        "csp": false
+                    }
+                ]
+            }
+        },
+
+        /**
+         * Enable *ONLY* CSRF filtered by route.
+         * Note: The route "regex" needs the double parens
+         * because of how express parses route strings.
+         */
+        "csrf": {
+            "enabled": true,
+            "priority": 111,
+            "route": "/((?!manage))*",
+            "module": {
+                "name": "lusca",
+                "method": "csrf",
+                "arguments": [ {} ]
+            }
+        },
+
         "expressView": {
             "priority": 100,
             "enabled": true,
@@ -48,7 +78,7 @@
                 "name": "engine-munger/lib/expressView"
             }
         },
-        
+
 
         "static": {
             "module": {
